syntax = "proto3";

package api;
option go_package = "github.com/xBlaz3kx/ChargePi-go/pkg/grpc";

import "google/protobuf/empty.proto";

// User management API
service Users {
  rpc AddUser(User) returns (AddUserResponse) {}
  rpc GetUsers(google.protobuf.Empty) returns (GetUsersResponse) {}
  rpc GetUser(GetUserRequest) returns (User) {}
  rpc RemoveUser(RemoveUserRequest) returns (RemoveUserResponse) {}
}

message User{
  string Username = 1;
  string Password = 2;
  string Role = 3;
}

message AddUserResponse {
  string Status = 1;
}

message GetUsersResponse {
  repeated User Users = 1;
}

message GetUserRequest {
  string Username = 1;
}

message RemoveUserRequest {
  string Username = 1;
}

message RemoveUserResponse {
  string Status = 1;
}